--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <htmk>
     <head>
+        <link rel="stylesheet" href="https://use.typekit.net/tkr8qsk.css">
         <title>albertlockett</title>
     </head>
     <body>
